[himeji] sync with upstream

--- a/www.city.himeji.lg.jp/s50/_25179/_8980/_15037.html
+++ b/www.city.himeji.lg.jp/s50/_25179/_8980/_15037.html
@@ -606,6 +606,8 @@ type="text/javascript"></script>
 					</div>					<div class="pbBlock pbBlockMenu ">
 						<span><a href="/s10/2212203/_26196.html" >企画政策推進室が所管する外郭団体について</a></span>
 					</div>					<div class="pbBlock pbBlockMenu ">
+						<span><a href="/s10/2212203/_29302.html" >平成25年度播磨地域情報発信事業業者募集について</a></span>
+					</div>					<div class="pbBlock pbBlockMenu ">
 						<span><a href="/s10/2212203/_1689.html" >記者発表資料</a></span>
 					</div>					<div class="pbBlock pbBlockMenu ">
 						<span><a href="/s10/2212203/_33850.html" >姫路城跡中曲輪の施設整備について</a></span>
@@ -617,6 +619,10 @@ type="text/javascript"></script>
 						<span><a href="/s10/2212203/_34535.html" >奨学学術振興事業（奨学事業）について</a></span>
 					</div>					<div class="pbBlock pbBlockMenu ">
 						<span><a href="/s10/2212203/_37220.html" >姫路市大学発まちづくり研究助成事業について</a></span>
+					</div>					<div class="pbBlock pbBlockMenu ">
+						<span><a href="/s10/2212203/_34537.html" >姫路市政策研究助成事業について</a></span>
+					</div>					<div class="pbBlock pbBlockMenu ">
+						<span><a href="/s10/2212203/_34541.html" >姫路市連携大学フィールドワーク支援事業について</a></span>
 					</div>					<div class="pbBlock pbBlockMenu ">
 						<span><a href="/s10/2212203/_35951.html" >奨学学術振興事業運営委員会</a></span>
 					</div>					<div class="pbBlock pbBlockMenu ">
@@ -5788,8 +5794,7 @@ type="text/javascript"></script>
 <div class="pbBlock pbBlockBase">
 <div class="hmFooterLinkBox">
 <ul>
-<li><a href="/sub/about.html">このサイトについて</a></li>
-<li><a href="/sub/vista.html">本市への情報送信について</a></li>
+<li><a href="/sub/about.html">このサイトについて</a>&nbsp;&nbsp;</li>
 <li><a href="/sub/privacy.html">プライバシーポリシー</a></li>
 <li><a href="/sub/copy.html">著作権・リンク・免責事項</a></li>
 </ul>
@@ -5861,3 +5866,5 @@ pageTracker._trackPageview();
 </div></div>
 </body>
 </html>
+
+<!-- static作成日時 2016/11/15 17:32:39 ,staticファイル名 s50/_25179/_8980/_15037.html (from:php) --> 
