--- a/www.city.himeji.lg.jp/s50/_25179/_8980/_17860.html
+++ b/www.city.himeji.lg.jp/s50/_25179/_8980/_17860.html
@@ -5875,8 +5875,7 @@ type="text/javascript"></script>
 <div class="pbBlock pbBlockBase">
 <div class="hmFooterLinkBox">
 <ul>
-<li><a href="/sub/about.html">このサイトについて</a></li>
-<li><a href="/sub/vista.html">本市への情報送信について</a></li>
+<li><a href="/sub/about.html">このサイトについて</a>&nbsp;&nbsp;</li>
 <li><a href="/sub/privacy.html">プライバシーポリシー</a></li>
 <li><a href="/sub/copy.html">著作権・リンク・免責事項</a></li>
 </ul>
@@ -5948,3 +5947,5 @@ pageTracker._trackPageview();
 </div></div>
 </body>
 </html>
+
+<!-- static作成日時 2016/11/15 17:24:49 ,staticファイル名 s50/_25179/_8980/_17860.html (from:php) --> 
