--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2810jigyoushaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2810jigyoushaboshu.html
@@ -240,7 +240,7 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年10月7日</dd></dl><p>平成28年度第2回介護保険施設等・平成28年度認知症高齢者グループホーム整備事業者募集及び平成28年度介護付有料老人ホーム事業者募集を次の通り実施します。</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年12月2日</dd></dl><p>平成28年度第2回介護保険施設等・平成28年度認知症高齢者グループホーム整備事業者募集及び平成28年度介護付有料老人ホーム事業者募集を次の通り実施します。<br />（募集の受付期間は終了しました）</p>
     <h2 id="midashi52582">１．介護保険施設等・認知症高齢者グループホーム</h2>
     <h3 id="midashi69601">募集要項はこちら</h3><ul class="link-list">
 
@@ -397,4 +397,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2016/10/06 18:19:54.287 GMT+9 -->
+<!-- Created: 2016/12/02 17:54:33.190 GMT+9 -->
