[nursery] sync with upstream (ninkagai)

--- a/www.city.kobe.lg.jp/child/grow/nursery/ninkagai/sisetu.html
+++ b/www.city.kobe.lg.jp/child/grow/nursery/ninkagai/sisetu.html
@@ -319,7 +319,7 @@
   <br />
   電話：078-322-6849  Fax：078-322-6897
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFswcE5gcH1XcFtocDtKcFRwXnBIcFxwUnBNcFhwXnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkwcEhgcH11cVdocDt3cFxvZnBrcSBwa3FTcGtxbHBycVJwe3F3cHRxU29mcHdwWnBxcXNwa3FQcHdwYXBycHBxIXB9b2Zwd3EicHRxUnBycWc%3D&lang=ja&ssi_code=K1026200600000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFtLcE5VcEpXcFtLcElKcFRwXnBIcFxwUnBNcFhwXnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlLcEhVcEp1cVdLcEl3cFxvZnBrcSBwa3FTcGtxbHBycVJwe3F3cHRxU29mcHdwWnBxcXNwa3FQcHdwYXBycHBxIXB9b2Zwd3EicHRxUnBycWc%3D&lang=ja&ssi_code=K1026200600000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -327,7 +327,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFswcE5gcH1XcFtocDtKcFRwXnBIcFxwUnBNcFhwXnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkwcEhgcH11cVdocDt3cFxvZnBrcSBwa3FTcGtxbHBycVJwe3F3cHRxU29mcHdwWnBxcXNwa3FQcHdwYXBycHBxIXB9b2Zwd3EicHRxUnBycWc%3D&lang=ja&ssi_code=K1026200600000-0000&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFtLcE5VcEpXcFtLcElKcFRwXnBIcFxwUnBNcFhwXnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlLcEhVcEp1cVdLcEl3cFxvZnBrcSBwa3FTcGtxbHBycVJwe3F3cHRxU29mcHdwWnBxcXNwa3FQcHdwYXBycHBxIXB9b2Zwd3EicHRxUnBycWc%3D&lang=ja&ssi_code=K1026200600000-0000&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -343,11 +343,12 @@ document.getElementById('contactLink').appendChild(elA);
   <li><a href="/sitemap.html">サイトマップ</a></li>
   <li><a href="/other/arukikata/index.html">神戸市ホームページのご利用案内</a></li>
   <li><a href="/other/p_policy.html">プライバシーポリシー</a></li>
+  <li><a href="/information/about/building/index.html">神戸市役所本庁舎のご案内</a></li>
 </ul>
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2016/04/01 02:24:57.997 GMT+9 -->
+<!-- Created: 2016/12/19 16:13:33.449 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
