[nursery ninkagai] sync with upstream

--- a/www.city.kobe.lg.jp/child/grow/nursery/ninkagai/sisetu.html
+++ b/www.city.kobe.lg.jp/child/grow/nursery/ninkagai/sisetu.html
@@ -238,35 +238,35 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年6月28日</dd></dl><p>平成28年6月28日現在</p><p>※各区名をクリックすると、各施設ごとの詳しい情報が表示されます。</p><ul class="link-list">
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年12月1日</dd></dl><p>平成28年12月1日現在</p><p>※各区名をクリックすると、各施設ごとの詳しい情報が表示されます。</p><ul class="link-list">
 
             <li class="doc-pdf">
-              <a href="/child/grow/nursery/ninkagai/img/higasinadaku.pdf">東灘区（PDF形式：310KB）</a>
+              <a href="/child/grow/nursery/ninkagai/img/higasinadaku.pdf">東灘区（PDF形式：286KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/child/grow/nursery/ninkagai/img/nadaku.pdf">灘区（PDF形式：158KB）</a>
+              <a href="/child/grow/nursery/ninkagai/img/nadaku.pdf">灘区（PDF形式：153KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/child/grow/nursery/ninkagai/img/tyuuouku.pdf">中央区（PDF形式：200KB）</a>
+              <a href="/child/grow/nursery/ninkagai/img/tyuuouku.pdf">中央区（PDF形式：194KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/child/grow/nursery/ninkagai/img/hyougo.nagataku.pdf">兵庫・長田区（PDF形式：125KB）</a>
+              <a href="/child/grow/nursery/ninkagai/img/hyougo.nagataku.pdf">兵庫・長田区（PDF形式：146KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/child/grow/nursery/ninkagai/img/kitaku.pdf">北区（PDF形式：167KB）</a>
+              <a href="/child/grow/nursery/ninkagai/img/kitaku.pdf">北区（PDF形式：164KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/child/grow/nursery/ninkagai/img/sumaku.pdf">須磨区（PDF形式：175KB）</a>
+              <a href="/child/grow/nursery/ninkagai/img/sumaku.pdf">須磨区（PDF形式：176KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/child/grow/nursery/ninkagai/img/tarumiku.pdf">垂水区（PDF形式：187KB）</a>
+              <a href="/child/grow/nursery/ninkagai/img/tarumiku.pdf">垂水区（PDF形式：178KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/child/grow/nursery/ninkagai/img/nisiku.pdf">西区（PDF形式：200KB）</a>
+              <a href="/child/grow/nursery/ninkagai/img/nisiku.pdf">西区（PDF形式：195KB）</a>
               </li>
     </ul>
     
-<table border="1" cellpadding="0" cellspacing="0"><tbody><tr><td valign="top" width="67"><div>区名</div></td><td valign="top" width="223"><div>施設名</div></td><td valign="top" width="53"><div>区名</div></td><td valign="top" width="228"><div>施設名</div></td></tr><tr><td valign="top" width="67"><div>東灘区</div></td><td valign="top" width="223"><div>保育園キッズガーデン</div><div>THE ENTENTE INTERNATIONAL PRE-SCHOOL</div><div>保育ルームぱんぷきんハウス</div><div>ママポート鴨子ヶ原</div><div><span>コープ地域保育室　保育ルームあいあい</span><br />コープ地域保育室　にじっこルーム</div><div>キッズクラブもとやま</div><div>リリパット・インターナショナル・プリスクール</div><div>キッズハーモニー・六甲アイランド<br />おうち保育園ゴンチチハウス<br />Ｓweet&nbsp;Ｈeart&nbsp;Ｉnternational&nbsp;Ｓchool<br />ちっちゃな保育園スマイリー<br />学校法人加計学園御影インターナショナルこども園<br />神戸インターナショナルスクール<br />エイコーンイングリッシュアカデミー<br />キッズルームくれよん</div></td><td valign="top" width="53"><div><span>北区</span></div></td><td valign="top" width="228"><div>小倉台ひまわり保育園<br />こひつじ保育園<br />託児所パパ＆ママ<br />保育施設ちから<br />岡場めばえ保育園<br />なかよしキッズ</div></td></tr><tr><td valign="top" width="67"><div><span>灘区</span></div></td><td valign="top" width="223"><div>ポポラー神戸六甲道園</div><div>保育所Ｆａｔｈｅｒ&amp;Ｍｏｔｈｅｒ</div><div>キッズフレンド保育園<br />関西インターナショナルスクール神戸校<br />さくら園 六甲道</div></td><td valign="top" width="53"><div><span>須磨区</span></div></td><td valign="top" width="228"><div align="left">共同保育所すま子供の園</div><div align="left">ドキドキキッズ保育ルーム</div><div align="left">保育ルームキッズ・ナチュレ板宿<br />キンダーキッズインターナショナルスクール 神戸シーサイド校</div><div align="left">保育所キッズランド妙法寺園</div><div align="left">保育所ピュア・キッズ須磨北園</div><div>きらめき保育園</div></td></tr><tr><td valign="top" width="67"><div><span>中央区</span></div></td><td valign="top" width="223"><div>マーノ・マーノ三宮園</div><div>チャイルドケアルーム ファンタジックアリス</div><div>スターブレインズインターナショナルスクール<br />ベビー＆キッズホーム ネバーランド<br />ファームリィ保育園<br />ベビープレイス<br />アップルキッズルーム三ノ宮<br />かとれあキッズ<br />キッズルームＯＪＩ</div></td><td valign="top" width="53"><div><span>垂水区</span></div></td><td valign="top" width="228"><div>チャイルドハート保育サロン舞子駅前園<br />神戸バイリンガルスクール（東垂水）<br />ちっちゃなこども園にじいろ　<br />インターナショナル・プリスクールCHES<br />塩屋キッズブライトインターナショナルプリスクール<br />託児所なかよしルーム<br />神戸バイリンガルスクール</div></td></tr><tr><td valign="top" width="67"><div><span>兵庫・長田区</span></div></td><td valign="top" width="223"><div>つばさほいくえん</div><div>なかよし園</div><div>ふれんどほいくえん&nbsp;</div></td><td valign="top" width="53"><div><span>西区</span></div></td><td valign="top" width="228"><div align="left">ひかり保育園</div><div align="left">こばとキンダーガーデン</div><div align="left">さくらキンダーガーデン</div><div align="left">保育ルームぴっぴ</div><div align="left">キッズアンドベビーゆびきり</div><div align="left">星鈴保育園</div><div align="left">保育所ちびっこランド持子園</div><div>ほいくしつ まみぃるうむ<br />ちゃいるどるーむ</div></td></tr></tbody></table>
+<table border="1" cellpadding="0" cellspacing="0"><tbody><tr><td valign="top" width="67"><div>区名</div></td><td valign="top" width="223"><div>施設名</div></td><td valign="top" width="53"><div>区名</div></td><td valign="top" width="228"><div>施設名</div></td></tr><tr><td valign="top" width="67"><div>東灘区</div></td><td valign="top" width="223"><div>保育園キッズガーデン</div><div>THE ENTENTE INTERNATIONAL PRE-SCHOOL</div><div>保育ルームぱんぷきんハウス</div><div>ママポート鴨子ヶ原</div><div><span>コープ地域保育室　保育ルームあいあい</span><br />コープ地域保育室　にじっこルーム</div><div>キッズクラブもとやま</div><div>リリパット・インターナショナル・プリスクール</div><div>キッズハーモニー・六甲アイランド<br />おうち保育園ゴンチチハウス<br />Ｓweet&nbsp;Ｈeart&nbsp;Ｉnternational&nbsp;Ｓchool<br />ちっちゃな保育園スマイリー<br />学校法人加計学園御影インターナショナルこども園<br />神戸インターナショナルスクール<br />エイコーンイングリッシュアカデミー<br />キッズルームくれよん</div></td><td valign="top" width="53"><div><span>北区</span></div></td><td valign="top" width="228"><div>小倉台ひまわり保育園<br />こひつじ保育園<br />託児所パパ＆ママ<br />保育施設ちから<br />岡場めばえ保育園<br />なかよしキッズ</div></td></tr><tr><td valign="top" width="67"><div><span>灘区</span></div></td><td valign="top" width="223"><div>ポポラー神戸六甲道園</div><div>保育所Ｆａｔｈｅｒ&amp;Ｍｏｔｈｅｒ</div><div>キッズフレンド保育園<br />関西インターナショナルスクール神戸校<br />さくら園 六甲道</div></td><td valign="top" width="53"><div><span>須磨区</span></div></td><td valign="top" width="228"><div align="left">共同保育所すま子供の園</div><div align="left">ドキドキキッズ保育ルーム</div><div align="left">保育ルームキッズ・ナチュレ板宿<br />キンダーキッズインターナショナルスクール 神戸シーサイド校</div><div align="left">保育所キッズランド妙法寺園</div><div align="left">保育所ピュア・キッズ須磨北園</div><div>きらめき保育園</div></td></tr><tr><td valign="top" width="67"><div><span>中央区</span></div></td><td valign="top" width="223"><div>マーノ・マーノ三宮園</div><div>チャイルドケアルーム ファンタジックアリス</div><div>スターブレインズインターナショナルスクール<br />ベビー＆キッズホーム ネバーランド<br />ファームリィ保育園<br />アップルキッズルーム三ノ宮<br />かとれあキッズ<br />キッズルームＯＪＩ</div></td><td valign="top" width="53"><div><span>垂水区</span></div></td><td valign="top" width="228"><div>チャイルドハート保育サロン舞子駅前園<br />神戸バイリンガルスクール（東垂水）<br />ちっちゃなこども園にじいろ　<br />インターナショナル・プリスクールCHES<br />塩屋キッズブライトインターナショナルプリスクール<br />託児所なかよしルーム<br />神戸バイリンガルスクール</div></td></tr><tr><td valign="top" width="67"><div><span>兵庫・長田区</span></div></td><td valign="top" width="223"><div>つばさほいくえん<br />わんぱくキッズ</div><div>なかよし園</div><div>ふれんどほいくえん&nbsp;</div></td><td valign="top" width="53"><div><span>西区</span></div></td><td valign="top" width="228"><div align="left">ひかり保育園</div><div align="left">こばとキンダーガーデン</div><div align="left">さくらキンダーガーデン</div><div align="left">保育ルームぴっぴ</div><div align="left">キッズアンドベビーゆびきり</div><div align="left">星鈴保育園</div><div align="left">保育所ちびっこランド持子園</div><div>ほいくしつ まみぃるうむ<br />ちゃいるどるーむ</div></td></tr></tbody></table>
   
 
 <div class="getPdf">
@@ -353,4 +353,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2016/09/01 16:16:41.169 GMT+9 -->
+<!-- Created: 2016/12/26 19:10:10.788 GMT+9 -->
