[carenet] sync with upstream

--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/hukugougata.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/hukugougata.html
@@ -239,7 +239,7 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年11月9日</dd></dl><p>2016年11月1日現在</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年12月27日</dd></dl><p>2017年1月1日現在</p>
     <h2 id="midashi58269">東灘区</h2>
 <table border="1" cellpadding="1" cellspacing="1" width="800"><tbody><tr><td>施設名</td><td>通所定員</td><td>宿泊定員</td><td>所在地</td><td>電話番号</td><td>最寄駅・停留所</td></tr><tr><td>みかげ倶楽部</td><td align="middle">18</td><td align="middle">9</td><td>東灘区住吉山手2丁目11-26</td><td>（078）<br />811-3380</td><td>【阪急】御影</td></tr></tbody></table>
   
@@ -247,7 +247,7 @@
 <table border="1" cellpadding="1" cellspacing="1" width="800"><tbody><tr><td>施設名</td><td>通所定員</td><td>宿泊定員</td><td>所在地</td><td>電話番号</td><td>最寄駅・停留所</td></tr><tr><td>看護小規模多機能型居宅介護なでしこ神戸</td><td>15</td><td>9</td><td>北区藤原台南町3丁目18-4</td><td>（078）984-3211</td><td>【神鉄】五社</td></tr><tr><td>看護小規模多機能型居宅介護さくらホーム</td><td>15</td><td>9</td><td>北区山田町小部字惣六畑山8-18</td><td>（078)596-6622</td><td>【阪急バス】（29)（30)峠</td></tr></tbody></table>
   
     <h2 id="midashi43912">垂水区</h2>
-<table border="1" cellpadding="1" cellspacing="1" width="800"><tbody><tr><td>施設名</td><td>通所定員</td><td>宿泊定員</td><td>所在地</td><td>電話番号</td><td>最寄駅・停留所</td></tr><tr><td>たるみな倶楽部</td><td>18</td><td>7</td><td>垂水区宮本町1-28</td><td>（078）707-6669</td><td>【JR】【山陽】垂水</td></tr></tbody></table>
+<table border="1" cellpadding="1" cellspacing="1" width="800"><tbody><tr><td>施設名</td><td>通所定員</td><td>宿泊定員</td><td>所在地</td><td>電話番号</td><td>最寄駅・停留所</td></tr><tr><td>たるみな倶楽部</td><td>18</td><td>7</td><td>垂水区宮本町1-28</td><td>（078）707-6669</td><td>【JR】【山陽】垂水</td></tr><tr><td>みょうだに倶楽部</td><td>18</td><td>9</td><td>垂水区名谷町1874</td><td>（078）798-5960</td><td>【山陽バス】あみだ堂</td></tr></tbody></table>
   
 
 
@@ -346,4 +346,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2016/11/09 21:01:21.054 GMT+9 -->
+<!-- Created: 2016/12/28 10:57:22.978 GMT+9 -->
