--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/shokibo.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/shokibo.html
@@ -239,7 +239,7 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年11月9日</dd></dl><p>2016年11月1日現在</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年12月27日</dd></dl><p>2017年1月1日現在</p>
         <ul class="links">
 
             <li>
@@ -286,7 +286,7 @@
 <table summary="北区小規模多機能型居宅介護拠点一覧"><tbody><tr><th>施設名</th><th>通所定員</th><th>宿泊定員</th><th>所在地</th><th>電話番号</th><th>最寄駅・停留所</th></tr><tr><td>イノセントケア有野</td><td>18</td><td>9</td><td>北区有野中町3丁目29-22</td><td>（078）<br />984-2006</td><td>【神戸電鉄】岡場</td></tr><tr><td>小規模多機能型居宅介護施設梅香園</td><td>15</td><td>9</td><td>北区山田町小部字南山2-35</td><td>（078）<br />595-2001</td><td>【神戸電鉄】鈴蘭台</td></tr><tr><td>小規模多機能型居宅介護 こころ</td><td>15</td><td>6</td><td>北区道場町日下部林ヶ鼻1853</td><td>（078）<br />950-1166</td><td>【神鉄】道場南口</td></tr><tr><td>小規模多機能型居宅介護 いろどりの家・大池</td><td>15</td><td>9</td><td>北区西大池2丁目7-31</td><td>（078）<br />224-5005</td><td>【神鉄】大池駅</td></tr></tbody></table>
   
     <h2 id="midashi96095">長田区</h2>
-<table summary="長田区小規模多機能型居宅介護拠点一覧"><tbody><tr><th>施設名</th><th>通所定員</th><th>宿泊定員</th><th>所在地</th><th>電話番号</th><th>最寄駅・停留所</th></tr><tr><td>小規模多機能　かけはし</td><td align="middle">18</td><td align="middle">6</td><td>長田区大橋町9丁目4-6</td><td>（078）<br />641-9825</td><td>【JR】【地下鉄西神・山手線】新長田</td></tr><tr><td>サテライト宮丘小規模多機能サービス</td><td align="middle">18</td><td align="middle">6</td><td>長田区宮丘町1丁目3-11</td><td>（078）<br />641-1222</td><td>【市バス】（8)（11)（110)（112)（113)宮丘町</td></tr><tr><td>小規模多機能施設　更紗</td><td align="middle">15</td><td align="middle">6</td><td>長田区野田町9丁目4-13</td><td>（078）<br />731-3100</td><td>【JR】鷹取駅</td></tr><tr><td>小規模多機能型居宅介護ハナ</td><td align="middle">12</td><td align="middle">6</td><td>長田区西尻池町2-4-28</td><td>（078）<br />798-5474</td><td>【地下鉄】【ＪＲ】新長田駅</td></tr><tr><td>小規模多機能型居宅介護フリーダム長田</td><td align="middle">12</td><td align="middle">6</td><td>長田区宮川町1-26-5</td><td>（078）<br />798-7802</td><td>【地下鉄】長田駅【神戸高速】高速長田駅</td></tr></tbody></table>
+<table summary="長田区小規模多機能型居宅介護拠点一覧"><tbody><tr><th>施設名</th><th>通所定員</th><th>宿泊定員</th><th>所在地</th><th>電話番号</th><th>最寄駅・停留所</th></tr><tr><td>小規模多機能　かけはし</td><td align="middle">18</td><td align="middle">6</td><td>長田区大橋町9丁目4-6</td><td>（078）<br />641-9825</td><td>【JR】【地下鉄西神・山手線】新長田</td></tr><tr><td>サテライト宮丘小規模多機能サービス</td><td align="middle">18</td><td align="middle">6</td><td>長田区宮丘町1丁目3-11</td><td>（078）<br />641-1222</td><td>【市バス】（8)（11)（110)（112)（113)宮丘町</td></tr><tr><td>小規模多機能施設　更紗</td><td align="middle">15</td><td align="middle">6</td><td>長田区野田町9丁目4-13</td><td>（078）<br />731-3100</td><td>【JR】鷹取駅</td></tr><tr><td>小規模多機能型居宅介護ハナ</td><td align="middle">12</td><td align="middle">6</td><td>長田区西尻池町2-4-28</td><td>（078）<br />798-5474</td><td>【地下鉄】【ＪＲ】新長田駅</td></tr><tr><td>小規模多機能型居宅介護フリーダム長田</td><td align="middle">12</td><td align="middle">6</td><td>長田区宮川町1-26-5</td><td>（078）<br />798-7802</td><td>【地下鉄】長田駅【神戸高速】高速長田駅</td></tr><tr><td>小規模多機能型居宅介護施設いこいの丘</td><td align="middle">15</td><td align="middle">6</td><td>長田区大日丘町1丁目13-8-1</td><td>（078）<br />612-0700</td><td>【地下鉄】長田駅【神戸高速】高速長田駅から【市バス】(4)大日丘住宅前</td></tr></tbody></table>
   
     <h2 id="midashi99970">須磨区</h2>
 <table summary="須磨区小規模多機能型居宅介護拠点一覧"><tbody><tr><th>施設名</th><th>通所定員</th><th>宿泊定員</th><th>所在地</th><th>電話番号</th><th>最寄駅・停留所</th></tr><tr><td>なのはな</td><td align="middle">18</td><td align="middle">9</td><td>須磨区白川台3丁目63-1</td><td>（078）<br />792-2210</td><td>【市バス】（70)白川台南口</td></tr><tr><td>すこやか友が丘</td><td align="middle">15</td><td align="middle">9</td><td>須磨区友が丘5丁目5-191</td><td>（078）<br />792-2929</td><td>【市バス】（73)北須磨団地</td></tr><tr><td>小規模多機能ホームひまわり</td><td align="middle">12</td><td align="middle">5</td><td>須磨区行幸町4丁目4-8</td><td>（078）<br />739-4959</td><td>【山陽】月見山駅・須磨寺駅</td></tr><tr><td>小規模多機能型居宅介護 花ちとせ</td><td align="middle">15</td><td align="middle">6</td><td>須磨区千歳町4丁目3-30</td><td>（078）<br />737-2001</td><td>【JR】鷹取駅</td></tr><tr><td>小規模多機能型居宅介護たかくらの夢</td><td align="middle">12</td><td align="middle">9</td><td>須磨区高倉台4丁目2-7</td><td>（078）<br />731-2215</td><td>【JR】【山陽】須磨駅から【市バス】(75)高倉台</td></tr></tbody></table>
@@ -394,4 +394,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2016/11/09 21:01:20.454 GMT+9 -->
+<!-- Created: 2016/12/28 10:57:20.379 GMT+9 -->
